[package]
name = "image-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rprompt = "1.0"
clap = { version = "3.2", features = ["derive"] }
anyhow = "1.0"
env_logger = "0.9"
log = "0.4"
thiserror = "1.0"
lazy-regex = "2.3"
