[package]
name = "dumpman"
version = "1.0.0"
edition = "2021"
authors = ["pslightjs"]
description = "Interactively categorize camera dumps"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rprompt = "1.0"
clap = { version = "3.2", features = ["derive"] }
anyhow = "1.0"
env_logger = "0.9"
log = "0.4"
thiserror = "1.0"
lazy-regex = "2.3"
strum = { version = "0.24", features = ["derive"] }
